juan_torres/session-02/exercise-01/drupal/drupal-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drupal-prod
  namespace: exercise-01
  labels:
    app: drupal
    tier: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 6
  selector:
    matchLabels:
      app: drupal
      tier: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: drupal
        tier: frontend
    spec:
      containers:
      - image: bitnami/drupal:latest
        name: drupal-prod
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
        volumeMounts:
        - name: volume-drupal
          mountPath: /bitnami
          subPath: drupal
        resources:
          limits:
            cpu: 350m
            memory: 1024Mi
          requests:
            cpu: 50m
            memory: 128Mi
        livenessProbe:
          exec:
            command:
            - "/bin/bash"
            - "-c"
            - "curl -I localhost:80 | grep -c 1 && kill -0 $(cat /opt/bitnami/apache/tmp/httpd.pid)"
          initialDelaySeconds: 60
          periodSeconds: 25
        readinessProbe:
          exec:
            command:
            - "/bin/bash"
            - "-c"
            - "curl -I localhost:80 | grep -c 1"
          initialDelaySeconds: 60
          periodSeconds: 35
      volumes:
      - name: volume-drupal
        persistentVolumeClaim:
          claimName: data-drupal
