juan_torres/session-02/exercise-01/drupal/drupal-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drupal-domain
  namespace: exercise-01
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: drupal.example.es
    http:
      paths:
      - backend:
          serviceName: drupal-internal
          servicePort: 80
        path: /
      - backend:
          serviceName: drupal-internal
          servicePort: 443
        path: /
  tls:
  - hosts:
    - drupal.example.es
    secretName: drupal-tls
